--- a/MyVagon/UI/Home.storyboard
+++ b/MyVagon/UI/Home.storyboard
@@ -4322,27 +4322,39 @@
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6a5-Sp-qvn">
                                                                                         <rect key="frame" x="221.5" y="0.0" width="172.5" height="32"/>
                                                                                         <subviews>
-                                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bid Starting Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65x-SH-D2g" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                                <rect key="frame" x="20" y="5" width="132.5" height="22"/>
-                                                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                                                <nil key="textColor"/>
-                                                                                                <nil key="highlightedColor"/>
-                                                                                                <userDefinedRuntimeAttributes>
-                                                                                                    <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
-                                                                                                        <real key="value" value="12"/>
-                                                                                                    </userDefinedRuntimeAttribute>
-                                                                                                    <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
-                                                                                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                                    </userDefinedRuntimeAttribute>
-                                                                                                </userDefinedRuntimeAttributes>
-                                                                                            </label>
+                                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oZ2-FG-AQl">
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="172.5" height="32"/>
+                                                                                                <subviews>
+                                                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bid Starting Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65x-SH-D2g" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                                                                                        <rect key="frame" x="20" y="5" width="132.5" height="22"/>
+                                                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                                                        <nil key="textColor"/>
+                                                                                                        <nil key="highlightedColor"/>
+                                                                                                        <userDefinedRuntimeAttributes>
+                                                                                                            <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
+                                                                                                                <real key="value" value="12"/>
+                                                                                                            </userDefinedRuntimeAttribute>
+                                                                                                            <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
+                                                                                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                            </userDefinedRuntimeAttribute>
+                                                                                                        </userDefinedRuntimeAttributes>
+                                                                                                    </label>
+                                                                                                </subviews>
+                                                                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                                                <constraints>
+                                                                                                    <constraint firstAttribute="bottom" secondItem="65x-SH-D2g" secondAttribute="bottom" constant="5" id="1P2-7e-fWK"/>
+                                                                                                    <constraint firstItem="65x-SH-D2g" firstAttribute="top" secondItem="oZ2-FG-AQl" secondAttribute="top" constant="5" id="AfU-JV-FFO"/>
+                                                                                                    <constraint firstAttribute="trailing" secondItem="65x-SH-D2g" secondAttribute="trailing" constant="20" id="uGS-rp-K6F"/>
+                                                                                                    <constraint firstItem="65x-SH-D2g" firstAttribute="leading" secondItem="oZ2-FG-AQl" secondAttribute="leading" constant="20" id="xe4-8m-mcK"/>
+                                                                                                </constraints>
+                                                                                            </view>
                                                                                         </subviews>
-                                                                                        <color key="backgroundColor" name="ThemeDarkYelloColor"/>
+                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <constraints>
-                                                                                            <constraint firstItem="65x-SH-D2g" firstAttribute="leading" secondItem="6a5-Sp-qvn" secondAttribute="leading" constant="20" id="Q1C-WJ-naj"/>
-                                                                                            <constraint firstAttribute="bottom" secondItem="65x-SH-D2g" secondAttribute="bottom" constant="5" id="aRW-0G-XxP"/>
-                                                                                            <constraint firstItem="65x-SH-D2g" firstAttribute="top" secondItem="6a5-Sp-qvn" secondAttribute="top" constant="5" id="csP-Js-B6e"/>
-                                                                                            <constraint firstAttribute="trailing" secondItem="65x-SH-D2g" secondAttribute="trailing" constant="20" id="x5Y-JA-bGV"/>
+                                                                                            <constraint firstItem="oZ2-FG-AQl" firstAttribute="leading" secondItem="6a5-Sp-qvn" secondAttribute="leading" id="7K4-fr-BV3"/>
+                                                                                            <constraint firstAttribute="trailing" secondItem="oZ2-FG-AQl" secondAttribute="trailing" id="blg-IR-P7Q"/>
+                                                                                            <constraint firstAttribute="bottom" secondItem="oZ2-FG-AQl" secondAttribute="bottom" id="fCY-Az-b3g"/>
+                                                                                            <constraint firstItem="oZ2-FG-AQl" firstAttribute="top" secondItem="6a5-Sp-qvn" secondAttribute="top" id="rBX-UK-lDR"/>
                                                                                             <constraint firstAttribute="height" constant="32" id="yAL-Tw-IYR"/>
                                                                                         </constraints>
                                                                                     </view>
@@ -4829,7 +4841,8 @@
                         <outlet property="lbljourney" destination="jxy-VF-c4X" id="q5S-qP-mQ5"/>
                         <outlet property="tblMainData" destination="aTq-C1-O3M" id="n3K-m5-s7a"/>
                         <outlet property="tblMainDataHeight" destination="D96-nV-9Yt" id="F2x-UY-ywM"/>
-                        <outlet property="viewStatus" destination="6a5-Sp-qvn" id="Tdb-yr-xUJ"/>
+                        <outlet property="viewStatus" destination="oZ2-FG-AQl" id="hnx-0o-Yfc"/>
+                        <outlet property="vwShimmer" destination="6a5-Sp-qvn" id="CYi-Xy-4CG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jWK-Yu-NxT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -4915,9 +4928,6 @@
         <image name="unselected_search" width="19.5" height="19.5"/>
         <namedColor name="ThemeBlackColor">
             <color red="0.062745098039215685" green="0.058823529411764705" blue="0.058823529411764705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="ThemeDarkYelloColor">
-            <color red="0.85882352941176465" green="0.6470588235294118" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ThemeGrayColor">
             <color red="0.60392156862745094" green="0.60392156862745094" blue="0.66274509803921566" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
