Load details shimmer effect add

--- a/MyVagon/UI/Home.storyboard
+++ b/MyVagon/UI/Home.storyboard
@@ -4839,6 +4839,7 @@
                         <outlet property="lblTotalMiles" destination="Qyp-dE-ske" id="QkJ-aF-yn0"/>
                         <outlet property="lblTruckType" destination="dAJ-42-S7z" id="wmc-DE-PFo"/>
                         <outlet property="lbljourney" destination="jxy-VF-c4X" id="q5S-qP-mQ5"/>
+                        <outlet property="scrollViewHide" destination="rzk-7W-OMS" id="GN0-6X-Epz"/>
                         <outlet property="tblMainData" destination="aTq-C1-O3M" id="n3K-m5-s7a"/>
                         <outlet property="tblMainDataHeight" destination="D96-nV-9Yt" id="F2x-UY-ywM"/>
                         <outlet property="viewStatus" destination="oZ2-FG-AQl" id="hnx-0o-Yfc"/>
@@ -4852,49 +4853,40 @@
     </scenes>
     <designables>
         <designable name="1F0-CZ-tTn">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="117.5" height="18.5"/>
         </designable>
         <designable name="1ik-zr-pIX">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="105.5" height="18.5"/>
         </designable>
         <designable name="41b-G4-9LY">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="118" height="18.5"/>
         </designable>
         <designable name="4Yk-CD-PZ6">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="134.5" height="18.5"/>
         </designable>
         <designable name="EM0-cS-mSz">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
-        </designable>
-        <designable name="Exb-wM-eW9">
-            <size key="intrinsicContentSize" width="120" height="20"/>
+            <size key="intrinsicContentSize" width="66" height="18.5"/>
         </designable>
         <designable name="P4e-b1-Po8">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
-        </designable>
-        <designable name="XV4-UW-Qe0">
-            <size key="intrinsicContentSize" width="-1" height="30"/>
+            <size key="intrinsicContentSize" width="135" height="18.5"/>
         </designable>
         <designable name="f4a-G4-rAK">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="96.5" height="18.5"/>
         </designable>
         <designable name="hye-uA-8rd">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
-        </designable>
-        <designable name="jX1-JX-WA3">
-            <size key="intrinsicContentSize" width="205.69999999999999" height="37.140000000000001"/>
+            <size key="intrinsicContentSize" width="114" height="18.5"/>
         </designable>
         <designable name="m28-MZ-YP9">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="114" height="18.5"/>
         </designable>
         <designable name="ovs-fh-rYv">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="127.5" height="18.5"/>
         </designable>
         <designable name="qQM-aq-rxT">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="122" height="18.5"/>
         </designable>
         <designable name="up4-Kv-YNl">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="78.5" height="18.5"/>
         </designable>
     </designables>
     <resources>
