--- a/MyVagon/UI/Home.storyboard
+++ b/MyVagon/UI/Home.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -1462,7 +1462,7 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="305" height="54"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJN-nd-Zz9" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="16.5"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="24"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -1477,7 +1477,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Upload vehicle paperwork &amp; EU Registration Document)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ki3-TJ-dm5" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="21.5" width="305" height="32.5"/>
+                                                                                <rect key="frame" x="0.0" y="29" width="305" height="25"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -1663,7 +1663,7 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MyAccountCell" id="jhL-N5-0d0" customClass="MyAccountCell" customModule="MyVagon" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="24.5" width="414" height="62"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="414" height="62"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jhL-N5-0d0" id="R9U-UA-Hl1">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="62"/>
@@ -3117,7 +3117,7 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NotificationCell" id="tvl-rM-EAq" customClass="NotificationCell" customModule="MyVagon" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="24.5" width="414" height="110.5"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="414" height="110.5"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tvl-rM-EAq" id="K9W-oS-DfO">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
@@ -3359,6 +3359,9 @@
                                                                         <real key="value" value="6"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                 </userDefinedRuntimeAttributes>
+                                                                <connections>
+                                                                    <action selector="btnSortClick:" destination="STv-Pd-7wT" eventType="touchUpInside" id="GUQ-z9-AO3"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <constraints>
@@ -3910,7 +3913,7 @@
                                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="settingTblCell" rowHeight="120" id="bBY-nb-kJe" customClass="settingTblCell" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="24.5" width="414" height="120"/>
+                                                        <rect key="frame" x="0.0" y="44.5" width="414" height="120"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bBY-nb-kJe" id="Flw-ei-4Ln">
                                                             <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
@@ -4851,44 +4854,6 @@
             <point key="canvasLocation" x="1501" y="-313"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="1F0-CZ-tTn">
-            <size key="intrinsicContentSize" width="117.5" height="18.5"/>
-        </designable>
-        <designable name="1ik-zr-pIX">
-            <size key="intrinsicContentSize" width="105.5" height="18.5"/>
-        </designable>
-        <designable name="41b-G4-9LY">
-            <size key="intrinsicContentSize" width="118" height="18.5"/>
-        </designable>
-        <designable name="4Yk-CD-PZ6">
-            <size key="intrinsicContentSize" width="134.5" height="18.5"/>
-        </designable>
-        <designable name="EM0-cS-mSz">
-            <size key="intrinsicContentSize" width="66" height="18.5"/>
-        </designable>
-        <designable name="P4e-b1-Po8">
-            <size key="intrinsicContentSize" width="135" height="18.5"/>
-        </designable>
-        <designable name="f4a-G4-rAK">
-            <size key="intrinsicContentSize" width="96.5" height="18.5"/>
-        </designable>
-        <designable name="hye-uA-8rd">
-            <size key="intrinsicContentSize" width="114" height="18.5"/>
-        </designable>
-        <designable name="m28-MZ-YP9">
-            <size key="intrinsicContentSize" width="114" height="18.5"/>
-        </designable>
-        <designable name="ovs-fh-rYv">
-            <size key="intrinsicContentSize" width="127.5" height="18.5"/>
-        </designable>
-        <designable name="qQM-aq-rxT">
-            <size key="intrinsicContentSize" width="122" height="18.5"/>
-        </designable>
-        <designable name="up4-Kv-YNl">
-            <size key="intrinsicContentSize" width="78.5" height="18.5"/>
-        </designable>
-    </designables>
     <resources>
         <image name="ic_Profile" width="40" height="40"/>
         <image name="ic_Search" width="16.5" height="16.5"/>
