--- a/MyVagon/Storyboard/Popup.storyboard
+++ b/MyVagon/Storyboard/Popup.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -824,7 +824,7 @@ like to view them?</string>
                                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort by" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7o-5t-pd3" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="187" height="30"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="55.5" height="30"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -839,7 +839,7 @@ like to view them?</string>
                                                                         </userDefinedRuntimeAttributes>
                                                                     </label>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HoL-Zx-5Cz" customClass="themeButton" customModule="MyVagon" customModuleProvider="target">
-                                                                        <rect key="frame" x="187" y="0.0" width="187" height="30"/>
+                                                                        <rect key="frame" x="55.5" y="0.0" width="318.5" height="30"/>
                                                                         <state key="normal" title="Reset"/>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="IsBlack" value="YES"/>
@@ -858,7 +858,7 @@ like to view them?</string>
                                                                 </constraints>
                                                                 <prototypes>
                                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SortPopupCell" id="Hgb-Ih-joy" customClass="SortPopupCell" customModule="MyVagon" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="28" width="374" height="40"/>
+                                                                        <rect key="frame" x="0.0" y="44.5" width="374" height="40"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hgb-Ih-joy" id="IdZ-px-Ko8">
                                                                             <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
@@ -944,7 +944,7 @@ like to view them?</string>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="50" id="04g-fV-1N0"/>
                                                                 </constraints>
-                                                                <state key="normal" title="Done"/>
+                                                                <state key="normal" title="Sort"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="IsSubmit" value="YES"/>
                                                                 </userDefinedRuntimeAttributes>
@@ -1075,7 +1075,7 @@ like to view them?</string>
                                                                 </constraints>
                                                                 <prototypes>
                                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SortPopupCell" id="uty-fw-egP" customClass="SortPopupCell" customModule="MyVagon" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="28" width="374" height="40"/>
+                                                                        <rect key="frame" x="0.0" y="44.5" width="374" height="40"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uty-fw-egP" id="nat-Ro-pKh">
                                                                             <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
