--- a/MyVagon/ViewController/Home/HeaderOfLocationsTbl.xib
+++ b/MyVagon/ViewController/Home/HeaderOfLocationsTbl.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,11 +12,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HeaderOfLocationsTbl" customModule="MyVagon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="579" height="237"/>
+            <rect key="frame" x="0.0" y="0.0" width="588" height="174"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ikL-gx-6UI">
-                    <rect key="frame" x="0.0" y="0.0" width="579" height="237"/>
+                    <rect key="frame" x="0.0" y="0.0" width="588" height="174"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="exE-hF-9XD">
                             <rect key="frame" x="15" y="10" width="55" height="51.5"/>
@@ -114,7 +114,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KJ-IT-5UF" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                            <rect key="frame" x="484" y="10" width="80" height="30"/>
+                            <rect key="frame" x="493" y="10" width="80" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="eWa-L2-twp"/>
                                 <constraint firstAttribute="height" constant="30" id="fcl-ha-1bB"/>
@@ -133,7 +133,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jrR-LB-X1C">
-                            <rect key="frame" x="471" y="50" width="108" height="40"/>
+                            <rect key="frame" x="480" y="50" width="108" height="40"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C9h-75-B5s">
                                     <rect key="frame" x="0.0" y="0.0" width="108" height="40"/>
@@ -164,10 +164,10 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="szdxfcghgjhfgzfdfdfkhfdhdffgdhxjhgfxhfgxffghxfkghxggyff" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mra-rJ-9Br" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                            <rect key="frame" x="471" y="95" width="100" height="35"/>
+                            <rect key="frame" x="430" y="95" width="150" height="43"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="2P8-3n-ZZH"/>
-                                <constraint firstAttribute="height" constant="35" id="yRS-aX-0rY"/>
+                                <constraint firstAttribute="width" constant="150" id="2P8-3n-ZZH"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="yRS-aX-0rY"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <nil key="textColor"/>
@@ -225,7 +225,7 @@
                 <outlet property="viewStatusBid" destination="Jn8-uL-jbO" id="gfC-mb-vCo"/>
                 <outlet property="vwStatusShimmer" destination="jrR-LB-X1C" id="pXv-LU-XQ7"/>
             </connections>
-            <point key="canvasLocation" x="258.69565217391306" y="-19.754464285714285"/>
+            <point key="canvasLocation" x="265.21739130434787" y="-40.848214285714285"/>
         </view>
     </objects>
     <resources>
