--- a/MyVagon/ViewController/TableCell/LoadDetailCell.xib
+++ b/MyVagon/ViewController/TableCell/LoadDetailCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -329,6 +329,7 @@
                 <outlet property="lblDate" destination="FoK-pc-KYf" id="fTv-x7-rv7"/>
                 <outlet property="lblName" destination="dAu-1V-uGE" id="AM5-Zp-csE"/>
                 <outlet property="lblPickupDropOff" destination="gl6-Lu-dG0" id="fA7-Ia-YAd"/>
+                <outlet property="vWHorizontalDotLine" destination="nYQ-8I-vBj" id="hMW-Up-mhw"/>
                 <outlet property="viewContents" destination="WPy-DH-QK3" id="Gyz-hN-3Xx"/>
                 <outlet property="viewStatus" destination="M5c-wf-exQ" id="dJs-vA-GHU"/>
                 <outlet property="vwShimmer" destination="Mxp-nI-4nj" id="slg-Le-l1e"/>
