--- a/MyVagon/ViewController/TableCell/PickLoadCell.xib
+++ b/MyVagon/ViewController/TableCell/PickLoadCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -23,16 +23,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASu-di-qxe" customClass="ViewCustomClass" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="300" height="80"/>
+                                <rect key="frame" x="10" y="0.0" width="300" height="90"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="9xp-Du-EPW">
-                                        <rect key="frame" x="10" y="8" width="280" height="64"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="9xp-Du-EPW">
+                                        <rect key="frame" x="10" y="8" width="280" height="74"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="09C-9e-6Yf">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="28"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coils Morps" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eh-jx-h09" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="223" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="223" height="28"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -42,12 +42,12 @@
                                                                 <color key="value" name="ThemeBlackColor"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
-                                                                <real key="value" value="12"/>
+                                                                <integer key="value" value="15"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2I-XH-yEm" customClass="themeButton" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="230" y="0.0" width="50" height="20.5"/>
+                                                        <rect key="frame" x="230" y="0.0" width="50" height="28"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="50" id="DkT-ql-nsq"/>
                                                         </constraints>
@@ -65,16 +65,16 @@
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TNx-2C-oSL">
-                                                <rect key="frame" x="0.0" y="23.5" width="280" height="40.5"/>
+                                                <rect key="frame" x="0.0" y="28" width="280" height="46"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 Ton" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXA-Qq-gED" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="5" y="5" width="42.5" height="30.5"/>
+                                                        <rect key="frame" x="0.0" y="5" width="42.5" height="36"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
-                                                                <real key="value" value="8"/>
+                                                                <integer key="value" value="12"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
                                                                 <color key="value" name="ThemeGrayColor"/>
@@ -82,13 +82,13 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 x Pallets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHB-vv-8dm" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="52.5" y="10" width="85" height="20.5"/>
+                                                        <rect key="frame" x="47.5" y="12.5" width="85" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
-                                                                <real key="value" value="8"/>
+                                                                <integer key="value" value="12"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
                                                                 <color key="value" name="ThemeGrayColor"/>
@@ -96,13 +96,13 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fragile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMl-di-GGm" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                        <rect key="frame" x="142.5" y="10" width="51.5" height="20.5"/>
+                                                        <rect key="frame" x="137.5" y="12.5" width="51.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="Font_Size">
-                                                                <real key="value" value="8"/>
+                                                                <integer key="value" value="12"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
                                                                 <color key="value" name="ThemeTamotoColor"/>
@@ -115,7 +115,7 @@
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rMl-di-GGm" secondAttribute="trailing" constant="5" id="WeR-zM-4Bp"/>
                                                     <constraint firstItem="rMl-di-GGm" firstAttribute="leading" secondItem="mHB-vv-8dm" secondAttribute="trailing" constant="5" id="Xzu-bH-CiF"/>
                                                     <constraint firstItem="rMl-di-GGm" firstAttribute="centerY" secondItem="mHB-vv-8dm" secondAttribute="centerY" id="eJi-6d-aCf"/>
-                                                    <constraint firstItem="GXA-Qq-gED" firstAttribute="leading" secondItem="TNx-2C-oSL" secondAttribute="leading" constant="5" id="rLm-xh-EJm"/>
+                                                    <constraint firstItem="GXA-Qq-gED" firstAttribute="leading" secondItem="TNx-2C-oSL" secondAttribute="leading" id="rLm-xh-EJm"/>
                                                     <constraint firstAttribute="bottom" secondItem="GXA-Qq-gED" secondAttribute="bottom" constant="5" id="vhn-bR-vqE"/>
                                                     <constraint firstItem="mHB-vv-8dm" firstAttribute="centerY" secondItem="GXA-Qq-gED" secondAttribute="centerY" id="vmj-cW-Gam"/>
                                                     <constraint firstItem="mHB-vv-8dm" firstAttribute="leading" secondItem="GXA-Qq-gED" secondAttribute="trailing" constant="5" id="wfJ-Vo-VUr"/>
@@ -144,7 +144,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ASu-di-qxe" firstAttribute="leading" secondItem="gSh-SX-ckh" secondAttribute="leading" constant="10" id="CbX-5L-fuF"/>
-                            <constraint firstItem="ASu-di-qxe" firstAttribute="top" secondItem="gSh-SX-ckh" secondAttribute="top" constant="10" id="CmE-0C-xGf"/>
+                            <constraint firstItem="ASu-di-qxe" firstAttribute="top" secondItem="gSh-SX-ckh" secondAttribute="top" id="CmE-0C-xGf"/>
                             <constraint firstAttribute="bottom" secondItem="ASu-di-qxe" secondAttribute="bottom" constant="10" id="Twy-dA-m9v"/>
                             <constraint firstAttribute="trailing" secondItem="ASu-di-qxe" secondAttribute="trailing" constant="10" id="atg-Ir-ioH"/>
                         </constraints>
